# sequencer

./: .gitignore  CMakeLists.txt  PlugInTis.hpp  Sequencer.hpp  TisActions.hpp  sequencePlatform.cpp  sequencerTest.cpp
